* Added support for plugin provisioning based on a given configuration via Maven repositories (including dependency resolution)
* Removed deprecated source locations from XML report
* Fixed an issue where diagram reports (e.g. GraphML) failed with an exception (`"Element type not supported:"`)
* Upgrade to PlantUML 1.2022.1
* Add support for Elk layout mechanism for use in PlantUML diagrams

== 1.11.1
* Fixed a problem with embedded PlantUML rules having `requiredConcepts` specified but not evaluated
* Upgraded to PlantUML 1.2021.8 and JRuby 9.2.20.0 (the latter should reduce the time for loading Asciidoc files on Windows systems)

== 1.11.0
* Added more specific source locations to jQAssistant XML report for improving integration with tools like SonarQube.
+
NOTE: The updated XML schema is available under https://schema.jqassistant.org/report/jqassistant-report-v1.11.xsd[]
* Optimized query used for resetting the store.

== 1.10.1

* Added support for `neo4j://` and `neo4j+s://` protocols for connecting to remote Neo4j (cluster) instances

== 1.10.0

* Concepts may provide to existing concepts to extend them, e.g. a pre-defined concept `java:GeneratedType` which is required by other rules (e.g. Spring related constraints) can be extended by a project specific concept `my-project:GeneratedType`:
+
[source,xml]
----
<!-- pre-defined concept, e.g. from the Java plugin -->
<concept id="java:GeneratedType">
  <cypher><![CDATA[
    MATCH
      (a:Artifact)-[:CONTAINS]->(generated:Java:Type:Generated)
    RETURN
      a as Artifact, count(generated) as GeneratedTypes
    ]]></cypher>
</concept>

<!-- project specific concept providing to the pre-defined concept -->
<concept id="my-project:GeneratedType">
  <cypher><![CDATA[
    MATCH
      (generated:Java:Type)
    WHERE
      generated.fqn starts with "com.acme.generated"
    SET
      generated:Generated
    RETURN
      count(generated) as GeneratedTypes
    ]]></cypher>
  <providesConcept refId="java:GeneratedType"/>