@@ -1,13 +1,18 @@
 package com.buschmais.jqassistant.core.analysis.test.matcher;
 
 import com.buschmais.jqassistant.core.rule.api.model.Rule;
+import com.buschmais.jqassistant.core.shared.annotation.ToBeRemovedInVersion;
 
 import org.hamcrest.Description;
 import org.hamcrest.TypeSafeMatcher;
 
 /**
  * Abstract base class for rules matchers.
+ *
+ * @deprecated This class is replaced by com.buschmais.jqassistant.core.test.matcher.AbstractRuleMatcher.
  */
+@Deprecated
+@ToBeRemovedInVersion(major = 1, minor = 13)
 public class AbstractRuleMatcher<T extends Rule> extends TypeSafeMatcher<T> {
 
     private Class<T> type;
