@@ -1,5 +1,6 @@
 package com.buschmais.jqassistant.core.store.test.matcher;
 
+import com.buschmais.jqassistant.core.shared.annotation.ToBeRemovedInVersion;
 import com.buschmais.jqassistant.core.store.api.model.FullQualifiedNameDescriptor;
 
 import org.hamcrest.Description;
@@ -7,7 +8,11 @@ import org.hamcrest.TypeSafeMatcher;
 
 /**
  * Abstract base class for descriptor matchers.
+ *
+ * @deprecated This class is replaced by com.buschmais.jqassistant.core.test.matcher.AbstractDescriptorMatcher.
  */
+@Deprecated
+@ToBeRemovedInVersion(major = 1, minor = 13)
 public class AbstractDescriptorMatcher<T extends FullQualifiedNameDescriptor> extends TypeSafeMatcher<T> {
 
     private Class<T> type;
@@ -16,7 +21,7 @@ public class AbstractDescriptorMatcher<T extends FullQualifiedNameDescriptor> ex
 
     /**
      * Constructor.
-     * 
+     *
      * @param type
      *            The descriptor types.
      * @param fullQualifiedName
